feat(audit): add logging to FollowUpReminderService (create, delete)